// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
         
      </span>
      totalling 
      <span>
        $1.93
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--create"
        replace={false}
        to="/create"
      >
        + Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseSummary with 3 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
         
      </span>
      totalling 
      <span>
        $260.91
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--create"
        replace={false}
        to="/create"
      >
        + Expense
      </Link>
    </div>
  </div>
</div>
`;
